--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0"
+    "@vercel/postgres": "^0.5.1"
   }
 }
