--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@vercel/postgres": "^0.5.1"
+    "@neondatabase/serverless": "^0.9.0"
   }
 }
